--- a/Licenta1/Views/Nodes/Edit.cshtml
+++ b/Licenta1/Views/Nodes/Edit.cshtml
@@ -12,7 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="NodeId" />
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="StationId" class="control-label"></label>
                 <select asp-for="StationId" class="form-control" asp-items="ViewBag.StationId"></select>
