--- a/Licenta1/Views/TrainRoutes/Create.cshtml
+++ b/Licenta1/Views/TrainRoutes/Create.cshtml
@@ -38,7 +38,7 @@
             <br />
             <div class="form-group">
 
-             <input type="submit" value="Adauga prima statie" class="btn btn-warning" asp-controller="TrainRoutes" asp-action="Create1"  name="@Model" asp-route-rute="@Model?.Rute"  />
+             <input type="submit" value="Adauga statie" class="btn btn-warning" asp-controller="TrainRoutes" asp-action="Create1"  name="@Model" asp-route-rute="@Model?.Rute"  />
              <input type="submit" value="Submit" class="btn btn-primary" asp-controller="TrainRoutes" asp-action="Create"  name="@Model" asp-route-rute="@Model?.Rute"   />
             </div>
         </form>
