--- a/Licenta1/Views/Nodes/Delete.cshtml
+++ b/Licenta1/Views/Nodes/Delete.cshtml
@@ -27,7 +27,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="NodeId" />
+        <input type="hidden" asp-for="Id" />
         <a asp-action="Index" class="btn btn-dark" >Back to List</a>
         <input type="submit" value="Delete" class="btn btn-danger" /> 
 
