--- a/Licenta1/Views/Nodes/Index.cshtml
+++ b/Licenta1/Views/Nodes/Index.cshtml
@@ -33,8 +33,8 @@
             </td>
             <td>
                 
-                <a asp-action="Details" asp-route-id="@item.NodeId" type="button" class="btn btn-warning">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.NodeId" type="button" class="btn btn-danger">Delete</a>
+                <a asp-action="Details" asp-route-id="@item.Id" type="button" class="btn btn-warning">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id" type="button" class="btn btn-danger">Delete</a>
             </td>
         </tr>
 }
